<resources>
    <string name="app_name">GridLayoutTest2</string>
    <string name="question">Thanks for choosingour awesome blend tea. How do you want it served?</string>
    <string name="temp">Temperature?</string>
    <string name="button">HOT</string>
    <string name="hot">HOT</string>
    <string name="cold">COLD</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
</resources>
